[workspace]
resolver = "2"
members = [
    "benchmark",
    "programs/account-data",
    "programs/account-resize",
    "programs/assign-owner",
    "programs/deny-allocator",
    "programs/transfer-lamports",
    "sdk"
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/febo/abiv2"
rust-version = "1.89.0"

[workspace.dependencies]
abiv2 = { path = "sdk" }
solana-address = "2.6"
solana-program-error = "3.0"
