[package]
name = "benchmark"
edition = "2021"
publish = false

[dev-dependencies]
mollusk-svm = { version = "0.13.4", git = "https://github.com/febo/mollusk.git", branch = "abiv2" }
solana-account = "4.3.0"
solana-address = { version = "2.0", features = ["decode"] }
solana-bpf-loader-program = { version = "4.2.0-alpha.0", git = "https://github.com/LucasSte/agave.git", branch = "cpi-done-right" }
solana-instruction = "3.4.0"
solana-logger = "3.0.0"
solana-program-error = "3.0.0"
solana-rent = "4.2.0"
solana-sdk-ids = "3.1.0"
solana-transaction-context = { version = "4.2.0-alpha.0", git = "https://github.com/LucasSte/agave.git", branch = "cpi-done-right" }
