[package]
name = "abiv2"
version = "0.0.0"
edition = "2021"

[features]
std = []

[dependencies]
solana-address = { workspace = true, features = ["copy"] }
solana-define-syscall = "5.1.0"
solana-program-error = { workspace = true }

[dev-dependencies]
libc = "0.2"
solana-address = { version = "2.6", features = ["atomic"] }
