[package]
name = "return-data"
version = "0.0.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
abiv2 = { workspace = true }
solana-address = { version = "2.6", features = ["syscalls"] }
solana-program-log = "1.2.0"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']
